--- a/The Layout Editor/app/src/main/res/layout/activity_main.xml
+++ b/The Layout Editor/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -31,7 +31,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_weight="1"
         android:background="#ffff00"
         android:gravity="center_vertical"
         android:text="@string/count_initial_value"
@@ -41,6 +40,9 @@
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintVertical_bias="0.425"
+        android:layout_below="@+id/button_toast"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         tools:ignore="RtlCompat" />
 
     <Button
@@ -52,10 +54,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_centerHorizontal="true"
         android:background="@color/design_default_color_primary"
         android:text="@string/button_label_count"
         android:textColor="@android:color/white"
+        android:layout_below="@+id/show_count"
         android:onClick="countUp"
         />
 
-</LinearLayout>
+</RelativeLayout>
