--- a/Text and ScrollingViews/app/src/main/res/layout/activity_main.xml
+++ b/Text and ScrollingViews/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,23 @@
 
         />
 
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/article_subheading">
 
-    <TextView
+
+        <TextView
         android:id="@+id/article"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/article_subheading"
         android:lineSpacingExtra="5sp"
         android:padding="@dimen/padding_regular"
-        android:text="@string/article_text" />
+        android:text="@string/article_text"
+        android:autoLink="web"
+        />
+
+    </ScrollView>
+
 
 </RelativeLayout>
