Code Challenge Completed.

--- a/Text and ScrollingViews/app/src/main/res/layout/activity_main.xml
+++ b/Text and ScrollingViews/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="0dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,7 +16,6 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
         android:textColor="@color/white"
         android:textStyle="bold" />
-
 
 
     <ScrollView
@@ -38,17 +38,26 @@
 
                 />
 
-        <TextView
-        android:id="@+id/article"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:lineSpacingExtra="5sp"
-        android:padding="@dimen/padding_regular"
-        android:text="@string/article_text"
-        android:autoLink="web"
-        />
+            <TextView
+                android:id="@+id/article"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:lineSpacingExtra="5sp"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/article_text" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/add_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:backgroundTint="@color/my_gray"
+                android:text="@string/add_comment"
+                android:textColor="@color/black"
+                />
+
+        </LinearLayout>
 
     </ScrollView>
 
